# ai-service

./: .env.example  .gitignore  CONTRIBUTING.md  NEXTJS_INTEGRATION.md  README.md  check_system.py  data.rar  langgraph.json  output_agent.json  pyproject.toml  quick_check.py  test_annex_names.py  test_check_pdf_extensions.py
app/: __init__.py
app/agents/: llmService.py  llm_service.py
app/agents/services/: __init__.py  llmService.py
app/agents/tenderAnalyzer/: __init__.py  mainGraph.py  pipelineNodes.py  prompts.py  specialistNodes.py  specialistSubgraph.py  state.py  tools.py
app/agents/tenderAnalyzer/schemas/: aggregatorSchemas.py  masterChecklist.py  routerSchemas.py  specialistFindings.py  specialistTasks.py
app/api/: constants.py  main.py  schemas.py  service_utils.py  services.py  utils.py  validators.py
app/api/schemas/: __init__.py  analysis_schemas.py  base_schemas.py
app/api/services/: __init__.py  analysis_service.py  file_service.py  pdf_processor.py  pdf_service.py  sse_service.py  tender_service.py  validation_service.py
app/api/tests/: __init__.py  run_all_tests.py  test_contractors.py  test_pdf_extensions.py  test_upload_original_names.py
app/api/utils/: __init__.py  pdf_json_utils.py  proposal_utils.py
app/core/: config.py  constants.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/analysis/: AnalysisDashboard.tsx  FindingsTable.tsx  ScoreCard.tsx
frontend/components/charts/: BudgetComparisonChart.tsx  FindingsPieChart.tsx  RadarScoreChart.tsx
frontend/components/layout/: AnalysisProgressIndicator.tsx
frontend/components/tenders/: ProposalUploadForm.tsx  TenderUploadZone.tsx
frontend/hooks/: useAnalysis.ts  useSSEStream.ts  useTender.ts
frontend/lib/: api.ts  chart-utils.ts  helpers.ts  types.ts  utils.ts
src/core/: config.py
src/services/: __init__.py  memory_service.py
tests/: conftest.py  test_api_basic.py  test_system_health.py
(+2 files in other folders)
