[tool.poetry]
name = "ai_service"
version = "0.1.0"
description = "Backend & AI"
authors = ["John Cortés <stevencortespozo@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9" # Or your target Python version
fastapi = {extras = ["standard"], version = "^0.115.12"}
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
openai = "^1.28.1"
httpx = "^0.27.0"
langchain = "^0.3"
langchain-openai = "^0.3"
langgraph = "^0.4.1"
langgraph-cli = {extras = ["inmem"], version = "^0.2.8"}
colorama = "^0.4.6" # Added colorama for langgraph dev
langgraph-checkpoint-sqlite = "^2.0.10"
pymupdf = "^1.26.3"
pypdf2 = "^3.0.1"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"