[project]
name = "ai_service"
version = "0.1.0"
description = "Backend & AI - TenderAnalyzer"
authors = [
    {name = "John Cortés", email = "stevencortespozo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "openai>=1.28.1",
    "httpx>=0.27.0",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.4.1",
    "langgraph-cli[inmem]>=0.2.8",
    "colorama>=0.4.6",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "pymupdf>=1.26.3",
    "pypdf2>=3.0.1",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
